@@ -1,3 +1,12 @@
+
+2012-03-07  Sancho Lerena <slerena@artica.es>
+
+        * util/pandora_xml_stress.conf
+        util/pandora_xml_stress.pl: Now xml_stress tool can use units
+        in the XML generated files. Default configuration file is useful
+        to generate "real" scenarios.
+
+
 2012-03-07  Sancho Lerena <slerena@artica.es>
 
 	* lib/PandoraFMS/Core.pm: Updated version.
